<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.todoapp.ui.screens.TaskUpdateFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topHeaderGuidLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cancel_btn"


        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/topHeaderGuidLine"

        style="@style/TextStyle"/>

    <TextView
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_delete_btn"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintBottom_toTopOf="@id/topHeaderGuidLine"

        style="@style/TextStyle"/>

    <TextView
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_save_btn"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/topHeaderGuidLine"

        style="@style/TextStyle"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_view"

        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/topHeaderGuidLine"

        style="@style/TitleStyle"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/textTitle"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_desc_view"

        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle"

        style="@style/TitleStyle"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/textDescription"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>